[package]
name = "ambient"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["rustls-tls", "json"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.75"
futures = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = { version = "1.0.18", features = ["serde"] }
clap = { version = "4.4.3", features = ["derive"] }
itertools = "0.11.0"
directories = "5.0"
log = "0.4.20"
env_logger = "0.10.0"
zip = "0.6.6"
toml = "0.8.0"
colored = "2.0.4"
