[package]
name = "ambient"
version = "0.2.8"
edition = "2021"
description = "CLI for Ambient, the multiplayer game engine"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ambient_api"
repository = "https://github.com/AmbientRun/Ambient"
homepage = "https://ambient.run"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.8", features = ["json"] }
anyhow = "1.0.75"
futures = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = { version = "1.0.18", features = ["serde"] }
clap = { version = "4.4.3", features = ["derive"] }
itertools = "0.11.0"
directories = "5.0"
log = "0.4.20"
env_logger = { version = "0.10.0", default-features = false, features = [
    "auto-color",
    "humantime",
] }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
toml = "0.8.0"
colored = "2.0.4"
toml_edit = "0.20.0"
